# gsc

./: .gitignore  CMakeLists.txt  GCS.pro  GCS_zh_CN.ts  ble.cpp  ble.h  connection_config.h  connector.h  connector_bridge.cpp  connector_bridge.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  option_dialog.cpp  option_dialog.h  option_dialog.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui  protocol.cpp  protocol.h  resources.qrc  serial.cpp  serial.h  serializable_connector.cpp  serializable_connector.h  serializer.cpp  serializer.h  webview_bridge.cpp  webview_bridge.h  webviewbridge.cpp  webviewbridge.h
webview/: index.html
